Apply a bunch of suggestions from Android Studio